unpackaged/main/default/objects/Lead/fields/z_Opp_Grant_Interest__c.field-meta.xml
<CustomField>
    <fullName>z_Opp_Grant_Interest__c</fullName>
    <description>Student expressed interest in applying for the Opportunity Grant</description>
    <label>z_Opp Grant Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>