unpackaged/main/default/objects/Lead/fields/z_Parent_1_Email__c.field-meta.xml
<CustomField>
    <fullName>z_Parent_1_Email__c</fullName>
    <label>z_Parent 1 Email</label>
    <type>Email</type>
</CustomField>