unpackaged/main/default/objects/Lead/fields/z_Parent_1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>z_Parent_1_First_Name__c</fullName>
    <label>z_Parent 1 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>