unpackaged/main/default/objects/Lead/fields/z_Parent_1_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>z_Parent_1_Phone_Number__c</fullName>
    <label>z_Parent 1 Phone Number</label>
    <type>Phone</type>
</CustomField>