unpackaged/main/default/objects/Lead/fields/z_Parent_2_Email__c.field-meta.xml
<CustomField>
    <fullName>z_Parent_2_Email__c</fullName>
    <label>z_Parent 2 Email</label>
    <type>Email</type>
</CustomField>