unpackaged/main/default/objects/Lead/fields/z_Parent_2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>z_Parent_2_Last_Name__c</fullName>
    <label>z_Parent 2 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>