unpackaged/main/default/objects/Lead/fields/z_Parents_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>z_Parents_Marital_Status__c</fullName>
    <label>z_Parents Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Never Married</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Civil Union/ Domestic Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>