unpackaged/main/default/objects/Lead/fields/z_Phone_F__c.field-meta.xml
<CustomField>
    <fullName>z_Phone_F__c</fullName>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_Phone-F</label>
    <type>Text</type>
</CustomField>