unpackaged/main/default/objects/Lead/fields/z_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>z_Pipeline__c</fullName>
    <label>z_Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2019-2020 Admissions Pipeline</fullName>
            </value>
            <value>
                <fullName>2020-2021 Admissions Pipeline</fullName>
            </value>
            <value>
                <fullName>2021-2022 Season and After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>