unpackaged/main/default/objects/Lead/fields/z_Please_Explain_Criminal__c.field-meta.xml
<CustomField>
    <fullName>z_Please_Explain_Criminal__c</fullName>
    <inlineHelpText>This field is populated from the student application if the student answer yes to having criminal convictions.</inlineHelpText>
    <label>z_Please Explain (Criminal)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>