unpackaged/main/default/objects/Lead/fields/z_Please_Explain_Disciplinary__c.field-meta.xml
<CustomField>
    <fullName>z_Please_Explain_Disciplinary__c</fullName>
    <inlineHelpText>This field is populated from the student application if the student answer yes to previous disciplinary instances.</inlineHelpText>
    <label>z_Please Explain (Disciplinary)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>