unpackaged/main/default/objects/Lead/fields/z_Please_indicate_how_you_identify_yours__c.field-meta.xml
<CustomField>
    <fullName>z_Please_indicate_how_you_identify_yours__c</fullName>
    <label>z_Race/Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Native American or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Hispanic or Latin American</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Hispanic/ Latino/a/x</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>