unpackaged/main/default/objects/Lead/fields/z_Post_Verto_Plans__c.field-meta.xml
<CustomField>
    <fullName>z_Post_Verto_Plans__c</fullName>
    <label>z_Post-Verto Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Post_Verto_Plans</valueSetName>
    </valueSet>
</CustomField>