unpackaged/main/default/objects/Lead/fields/z_Preferred_Communication__c.field-meta.xml
<CustomField>
    <fullName>z_Preferred_Communication__c</fullName>
    <label>z_Preferred Communication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>