unpackaged/main/default/objects/Lead/fields/z_Previously_Attended_College__c.field-meta.xml
<CustomField>
    <fullName>z_Previously_Attended_College__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Previously Attended College?</label>
    <type>Checkbox</type>
</CustomField>