unpackaged/main/default/objects/Lead/fields/z_Primary_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>z_Primary_Citizenship__c</fullName>
    <label>z_Primary Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Antigua &amp; Deps</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Bhutan</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Bosnia Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Brunei</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Burkina</fullName>
            </value>
            <value>
                <fullName>Burundi</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>