unpackaged/main/default/objects/Lead/fields/z_Proficient_Languages__c.field-meta.xml
<CustomField>
    <fullName>z_Proficient_Languages__c</fullName>
    <label>z_Proficient Languages</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>