unpackaged/main/default/objects/Lead/fields/z_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>z_Program_Name__c</fullName>
    <description>Program Name</description>
    <label>z_Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>