unpackaged/main/default/objects/Lead/fields/z_Receive_Communications_from_Verto__c.field-meta.xml
<CustomField>
    <fullName>z_Receive_Communications_from_Verto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Receive Communications from Verto?</label>
    <type>Checkbox</type>
</CustomField>