unpackaged/main/default/objects/Lead/fields/z_Reengaged__c.field-meta.xml
<CustomField>
    <fullName>z_Reengaged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Student has filled out the RFI again</inlineHelpText>
    <label>z_Reengaged</label>
    <type>Checkbox</type>
</CustomField>