unpackaged/main/default/objects/Lead/fields/z_Residency_Status__c.field-meta.xml
<CustomField>
    <fullName>z_Residency_Status__c</fullName>
    <label>z_Residency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Permanent Resident</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>