unpackaged/main/default/objects/Lead/fields/z_RespondedTo__c.field-meta.xml
<CustomField>
    <fullName>z_RespondedTo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_RespondedTo</label>
    <type>Checkbox</type>
</CustomField>