unpackaged/main/default/objects/Lead/fields/z_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>z_Round_Robin__c</fullName>
    <formula>MOD(VALUE(z_Lead_Number__c),15)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_Round Robin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>