unpackaged/main/default/objects/Lead/fields/z_Select_your_Starting_Semester__c.field-meta.xml
<CustomField>
    <fullName>z_Select_your_Starting_Semester__c</fullName>
    <label>z_Select your Starting Semester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fall 2021</fullName>
            </value>
            <value>
                <fullName>Spring 2022</fullName>
            </value>
            <value>
                <fullName>Fall 2022</fullName>
            </value>
            <value>
                <fullName>Spring 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>