unpackaged/main/default/objects/Lead/fields/z_Short_Form__c.field-meta.xml
<CustomField>
    <fullName>z_Short_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Short Form</label>
    <type>Checkbox</type>
</CustomField>