unpackaged/main/default/objects/Lead/fields/z_Student_Application_Page_2__c.field-meta.xml
<CustomField>
    <fullName>z_Student_Application_Page_2__c</fullName>
    <description>This link is auto generated from FormStack when a new lead is created and can be used to email students to complete their applications (i.e. Page 2 of the application).</description>
    <inlineHelpText>This link is auto generated when a new lead is created and can be used to email students to complete their applications (i.e. Page 2 of the application).</inlineHelpText>
    <label>z_Student Application Page 2</label>
    <type>Url</type>
</CustomField>