unpackaged/main/default/objects/Lead/fields/z_sys_Channel_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>z_sys_Channel_Partner_Name__c</fullName>
    <description>This field is used to input the University name of the Channel Partner based off the Source to be used in Distribution Engine for assignment.</description>
    <label>z_sys_Channel Partner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>