unpackaged/main/default/objects/Lead/fields/z_TempCounsEmail__c.field-meta.xml
<CustomField>
    <fullName>z_TempCounsEmail__c</fullName>
    <label>z_TempCounsEmail</label>
    <type>TextArea</type>
</CustomField>