unpackaged/main/default/objects/Lead/fields/z_TempGPA__c.field-meta.xml
<CustomField>
    <fullName>z_TempGPA__c</fullName>
    <label>z_TempGPA</label>
    <type>TextArea</type>
</CustomField>