unpackaged/main/default/objects/Lead/fields/z_TempP2email__c.field-meta.xml
<CustomField>
    <fullName>z_TempP2email__c</fullName>
    <label>z_TempP2email</label>
    <type>TextArea</type>
</CustomField>