unpackaged/main/default/objects/Lead/fields/z_Tier_1_Owner__c.field-meta.xml
<CustomField>
    <fullName>z_Tier_1_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_Tier 1 Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>