unpackaged/main/default/objects/Lead/fields/z_UnbouncePageID__c.field-meta.xml
<CustomField>
    <fullName>z_UnbouncePageID__c</fullName>
    <label>z_Unbounce Page ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>