unpackaged/main/default/objects/Lead/fields/z_Website_Activity__c.field-meta.xml
<CustomField>
    <fullName>z_Website_Activity__c</fullName>
    <description>Website activity shows you how many times a contact has visited your site and viewed your pages.</description>
    <label>z_Website Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>