unpackaged/main/default/objects/Lead/fields/z_Which_Semesters_Interest_You_Most__c.field-meta.xml
<CustomField>
    <fullName>z_Which_Semesters_Interest_You_Most__c</fullName>
    <label>z_Which Semesters Interest You Most</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programs</valueSetName>
    </valueSet>
</CustomField>