unpackaged/main/default/objects/Lead/fields/z_Which_Verto_Semesters_Interest_You_Mos__c.field-meta.xml
<CustomField>
    <fullName>z_Which_Verto_Semesters_Interest_You_Mos__c</fullName>
    <label>z_Which Verto Semesters Interest You Mos</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>