unpackaged/main/default/objects/Lead/fields/z_Your_college_plans__c.field-meta.xml
<CustomField>
    <fullName>z_Your_college_plans__c</fullName>
    <description>This field is populated from the student application.</description>
    <inlineHelpText>This field is populated from the student application.</inlineHelpText>
    <label>z_Your college plans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>