unpackaged/main/default/objects/Lead/recordTypes/Channel_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Channel_Enrollment</fullName>
    <active>true</active>
    <businessProcess>Channel Enrollment</businessProcess>
    <description>The record type for students sent to Verto from a University partner</description>
    <label>Channel Enrollment</label>
</RecordType>