unpackaged/main/default/objects/Lead/recordTypes/Parent_Guardian.recordType-meta.xml
<RecordType>
    <fullName>Parent_Guardian</fullName>
    <active>true</active>
    <businessProcess>Traditional Enrollment</businessProcess>
    <description>The record type for the parents or legal guardians of students following Verto&#39;s enrollment process</description>
    <label>Parent/Guardian</label>
</RecordType>