unpackaged/main/default/objects/Lead/recordTypes/Traditional_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Traditional_Enrollment</fullName>
    <active>true</active>
    <businessProcess>Traditional Enrollment</businessProcess>
    <description>The record type for students following Verto&#39;s traditional enrollment process</description>
    <label>Traditional Enrollment</label>
</RecordType>