unpackaged/main/default/objects/Lead/validationRules/Marketing_Nurture_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Nurture_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.Bypass_Validation__c = false,

or(
left(RecordTypeId, 15) = left($Label.RT_Lead_TraditionalEnrollment, 15),
left(RecordTypeId, 15) = left($Label.RT_Lead_ChannelEnrollment, 15)
),

ISPICKVAL(Status, &quot;Marketing Nurture&quot;),

ISPICKVAL(Marketing_Nurture_Reason__c, &quot;&quot;),

or(
ischanged(Status),
ischanged(Marketing_Nurture_Reason__c)
)
)</errorConditionFormula>
    <errorDisplayField>Marketing_Nurture_Reason__c</errorDisplayField>
    <errorMessage>Please enter a Marketing Nurture Reason.</errorMessage>
</ValidationRule>