unpackaged/main/default/objects/Lead/validationRules/Original_Source_Cannot_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Original_Source_Cannot_be_Changed</fullName>
    <active>true</active>
    <description>Once the Original Source is filled, it can&#39;t be edited. The only exception is if DemandTools is merging leads, which is run by the General Salesforce Admin User.</description>
    <errorConditionFormula>and(
$User.Bypass_Validation__c = false,

LEFT( $User.Id , 15) &lt;&gt; LEFT( $Label.User_GeneralSalesforceAdmin , 15),

ischanged(Original_Source__c),

not(isblank(priorvalue(Original_Source__c)))
)</errorConditionFormula>
    <errorDisplayField>Original_Source__c</errorDisplayField>
    <errorMessage>The original source can&#39;t be edited.</errorMessage>
</ValidationRule>