unpackaged/main/default/objects/Lead/validationRules/Persona_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Persona_cannot_be_blank</fullName>
    <active>true</active>
    <description>This validation rule confirms Persona is filled in prior to converting a lead.</description>
    <errorConditionFormula>AND(
$User.Bypass_Validation__c = FALSE,

 IsConverted = TRUE,
ISBLANK(TEXT( Persona__c ))
)</errorConditionFormula>
    <errorMessage>Please select the Persona.</errorMessage>
</ValidationRule>