unpackaged/main/default/objects/Lead/validationRules/Phone_Cannot_Be_Deleted.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Cannot_Be_Deleted</fullName>
    <active>true</active>
    <description>Prevents a phone number from being deleted. If the lead is synced to Five9, deleting the phone number will break that sync.</description>
    <errorConditionFormula>AND(
!$User.Bypass_Validation__c,

OR(
LEFT( RecordTypeId , 15) = LEFT( $Label.RT_Lead_TraditionalEnrollment , 15),
LEFT( RecordTypeId , 15) = LEFT( $Label.RT_Lead_ChannelEnrollment , 15)
),

ISBLANK(Phone),
ISCHANGED( Phone ),
!ISBLANK(PRIORVALUE(Phone))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>The phone number cannot be deleted. Please consider using the Phone Not Viable checkbox instead.</errorMessage>
</ValidationRule>