unpackaged/main/default/objects/Lead/validationRules/Required_for_Converting_TE.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_for_Converting_TE</fullName>
    <active>true</active>
    <description>Requirement for converting a traditional lead</description>
    <errorConditionFormula>AND(
$User.Bypass_Validation__c = FALSE,

left( RecordTypeId , 15) = left( $Label.RT_Lead_TraditionalEnrollment , 15),

ischanged(IsConverted),

IsConverted = TRUE,

isblank(Associated_Application__c)
)</errorConditionFormula>
    <errorMessage>There must be an Associated Application prior to converting the lead.</errorMessage>
</ValidationRule>