unpackaged/main/default/objects/Lead/validationRules/Tier_1_Owner_Cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_1_Owner_Cannot_be_empty</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   $User.Bypass_Validation__c = FALSE,
   IsConverted = TRUE,
   ISBLANK( z_Tier_1_Owner__c ),
   NOT(ISPICKVAL( LeadSource ,&quot;Channel Enrollment&quot;))
)</errorConditionFormula>
    <errorMessage>Please input the Tier 1 Owner prior to converting the lead.</errorMessage>
</ValidationRule>