unpackaged/main/default/objects/Lead/validationRules/Unqualified_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.Bypass_Validation__c = false,

or(
left(RecordTypeId, 15) = left($Label.RT_Lead_TraditionalEnrollment, 15),
left(RecordTypeId, 15) = left($Label.RT_Lead_ChannelEnrollment, 15)
),

ISPICKVAL(Status, &quot;Unqualified&quot;),

ISPICKVAL(Unqualified_Reason__c, &quot;&quot;),

or(
ischanged(Status),
ischanged(Unqualified_Reason__c)
)
)</errorConditionFormula>
    <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
    <errorMessage>Please enter an Unqualified Reason.</errorMessage>
</ValidationRule>