unpackaged/main/default/objects/Lead/listViews/Admissions_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Admissions_Lead_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Admissions Lead Queue</label>
    <queue>Admissions_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>