unpackaged/main/default/objects/Lead/listViews/All_2020_2021_2022_Leads.listView-meta.xml
<ListView>
    <fullName>All_2020_2021_2022_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Year_of_Graduation__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>Last_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.PHONE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Year_of_Graduation__c</field>
        <operation>equals</operation>
        <value>2020,2021,2022</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>In Review,Unqualified</value>
    </filters>
    <label>All 2020 + 2021 + 2022 Leads</label>
</ListView>