unpackaged/main/default/objects/Lead/listViews/All_Attempted_Contacts_Ben.listView-meta.xml
<ListView>
    <fullName>All_Attempted_Contacts_Ben</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>Persona__c</columns>
    <columns>Year_of_Graduation__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>z_New_Lead_Date__c</columns>
    <columns>High_School_GPA__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Attempted Contact</value>
    </filters>
    <filters>
        <field>z_New_Lead_Date__c</field>
        <operation>greaterThan</operation>
        <value>6/25/2020</value>
    </filters>
    <label>All Attempted Contacts (Ben)</label>
    <sharedTo>
        <role>Head_of_Enrollment_Services</role>
    </sharedTo>
</ListView>